fix: category menu overflow

--- a/src/components/layout/category-menu/CategoryMenu.scss
+++ b/src/components/layout/category-menu/CategoryMenu.scss
@@ -1,8 +1,25 @@
+@import 'src/assets/styles/colors';
+
 .category-menu-container {
+  ::-webkit-scrollbar {
+    height: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px gray;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: $topbar-color;
+    border-radius: 10px;
+  }
+
   .menu-open {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    overflow-x: auto;
 
     &[hidden] {
       display: none;
@@ -16,6 +33,10 @@
     .category-icon {
       width: 50px;
       height: 50px;
+    }
+
+    .MuiButtonBase-root {
+      padding: 0 5px;
     }
   }
 }
